--- a/src/Baseball_frontend/index.html
+++ b/src/Baseball_frontend/index.html
@@ -6,25 +6,24 @@
   <meta name="viewport" content="width=device-width" />
   <title>Baseball Roster</title>
   <base href="/" />
-  <link rel="icon" href="/favicon.ico" />
-  <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js" crossorigin></script>
-
-  <script
-    src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"
-    crossorigin></script>
+  <!-- <link rel="icon" href="/favicon.ico" /> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js" crossorigin></script>
 
   <script
     src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
-    crossorigin></script>
+  crossorigin></script> -->
 
-  <script>var Alert = ReactBootstrap.Alert;</script>
+  <!-- <script
+    src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js" crossorigin></script> -->
 
-    <link
+  <!-- <script>var Alert = ReactBootstrap.Alert;</script> -->
+
+    <!-- <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
     crossorigin="anonymous"
-  />
+  /> -->
    <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
@@ -33,6 +32,10 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
+
+  <!-- Get PapaParse library. Contains .CSV to JSON utiity. -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 
   </head>
 
